--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   animated_splash_screen: ^1.3.0
   google_nav_bar: ^5.0.6
+  font_awesome_flutter: ^10.1.0
 
 dev_dependencies:
   flutter_test:
