--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   animated_splash_screen: ^1.3.0
   google_nav_bar: ^5.0.6
   font_awesome_flutter: ^10.1.0
+  firebase_core: ^1.21.1
 
 dev_dependencies:
   flutter_test:
