--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_core: ^1.21.1
   firebase_auth: ^3.7.0
   shared_preferences: ^2.0.15
+  provider: ^6.0.3
+  modal_progress_hud_nsn: ^0.3.0
 
 dev_dependencies:
   flutter_test:
